# mtkLogger

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  example_main.cpp  mtkAbstractAppender.cpp  mtkAbstractAppender.h  mtkAbstractLogger.cpp  mtkAbstractLogger.h  mtkLoggerConfig.cmake  mtkLoggerExportMacro.h  mtkLoggerLevel.h  mtkLoggerManager.cpp  mtkLoggerManager.h  mtkLoggerMessage.cpp  mtkLoggerMessage.h  mtkLoggerNamespaceMacro.h  mtkNullMessageLogger.h
Appender/: mtkConsoleAppender.cpp  mtkConsoleAppender.h  mtkFileAppender.cpp  mtkFileAppender.h  mtkRollingFileAppender.cpp  mtkRollingFileAppender.h
cmake/: mtkLoggerConfig.cmake.in
example/: main.cpp
include/: mtkAbstractAppender.h  mtkAbstractLogger.h  mtkLogger.h  mtkLoggerExportMacro.h  mtkLoggerMacro.h  mtkLoggerManager.h  mtkLoggerMessage.h  mtkLoggerNamespaceMacro.h  mtkNullMessageLogger.h
include/Appender/: mtkConsoleAppender.h  mtkFileAppender.h  mtkRollingFileAppender.h
src/: mtkAbstractAppender.cpp  mtkAbstractLogger.cpp  mtkLogger.cpp  mtkLoggerManager.cpp  mtkLoggerMessage.cpp
src/Appender/: mtkConsoleAppender.cpp  mtkFileAppender.cpp  mtkRollingFileAppender.cpp
